# weather_attire

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
config/: baires_config.json  template_recommendation.txt
src/: dashboard.py  get_weather.py  recommender.py
