[tool.poetry]
name = "weather-attire"
version = "0.1.0"
description = ""
authors = ["DelfiM <delfinamontilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openmeteo-requests = "^1.2.0"
pandas = "^2.2.1"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
numpy = "^1.26.4"
transformers = "^4.38.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
